[gd_scene load_steps=8 format=3 uid="uid://kuxl51n0xn6p"]

[ext_resource type="Script" uid="uid://bwb058y77b6u8" path="res://node_2d.gd" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://deqx3as1xgwnn" path="res://targets_neutral.png" id="2_0e48y"]
[ext_resource type="Texture2D" uid="uid://b7iuupxh4bndr" path="res://presets/slight_hold_curve.tres" id="3_epypp"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0e48y"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 8.0
emission_ring_inner_radius = 7.0
emission_ring_cone_angle = 90.0
inherit_velocity_ratio = 0.655
spread = 180.0
initial_velocity_min = 64.6
initial_velocity_max = 131.78
gravity = Vector3(0, 0, 0)
linear_accel_min = -31.270002
linear_accel_max = 35.909996
radial_accel_min = -100.0
radial_accel_max = -29.970001
tangential_accel_min = -50.39
tangential_accel_max = 16.279997
damping_min = 68.992004
damping_max = 100.00001
color = Color(0.3529412, 0.6431373, 0.78039217, 1)
alpha_curve = ExtResource("3_epypp")
hue_variation_min = -0.030000022
hue_variation_max = 0.029999977

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_epypp"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 8.0
emission_ring_inner_radius = 7.0
emission_ring_cone_angle = 90.0
inherit_velocity_ratio = 0.655
spread = 180.0
initial_velocity_min = 64.6
initial_velocity_max = 131.78
gravity = Vector3(0, 0, 0)
linear_accel_min = -31.270002
linear_accel_max = 35.909996
radial_accel_min = -100.0
radial_accel_max = -29.970001
tangential_accel_min = -50.39
tangential_accel_max = 16.279997
damping_min = 68.992004
damping_max = 100.00001
color = Color(0.7529412, 0.20784314, 0.2784314, 1)
alpha_curve = ExtResource("3_epypp")
hue_variation_min = -0.030000022
hue_variation_max = 0.029999977

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0hol4"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 8.0
emission_ring_inner_radius = 7.0
emission_ring_cone_angle = 90.0
inherit_velocity_ratio = 0.655
spread = 180.0
initial_velocity_min = 64.6
initial_velocity_max = 131.78
gravity = Vector3(0, 0, 0)
linear_accel_min = -31.270002
linear_accel_max = 35.909996
radial_accel_min = -100.0
radial_accel_max = -29.970001
tangential_accel_min = -50.39
tangential_accel_max = 16.279997
damping_min = 68.992004
damping_max = 100.00001
color = Color(0.44705883, 0.65882355, 0.3019608, 1)
alpha_curve = ExtResource("3_epypp")
hue_variation_min = -0.030000022
hue_variation_max = 0.029999977

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q6r6c"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 8.0
emission_ring_inner_radius = 7.0
emission_ring_cone_angle = 90.0
inherit_velocity_ratio = 0.655
spread = 180.0
initial_velocity_min = 64.6
initial_velocity_max = 131.78
gravity = Vector3(0, 0, 0)
linear_accel_min = -31.270002
linear_accel_max = 35.909996
radial_accel_min = -100.0
radial_accel_max = -29.970001
tangential_accel_min = -50.39
tangential_accel_max = 16.279997
damping_min = 68.992004
damping_max = 100.00001
color = Color(0.95686275, 0.7647059, 0.27058825, 1)
alpha_curve = ExtResource("3_epypp")
hue_variation_min = -0.030000022
hue_variation_max = 0.029999977

[node name="Node2D" type="Node2D"]
scale = Vector2(3.6045878, 3.601274)
script = ExtResource("1_wtcfe")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.12513235, 0.12512228, 0.16647366, 1)
metadata/_edit_use_anchors_ = true

[node name="Circle_D" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Circle_D"]
position = Vector2(106, 60)
texture = ExtResource("2_0e48y")
hframes = 4

[node name="GPUParticles2D" type="GPUParticles2D" parent="Circle_D"]
position = Vector2(106, 60)
emitting = false
amount = 60
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_0e48y")

[node name="Circle_F" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Circle_F"]
position = Vector2(212, 60)
texture = ExtResource("2_0e48y")
hframes = 4
frame = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="Circle_F"]
position = Vector2(212, 60)
emitting = false
amount = 60
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_epypp")

[node name="Circle_J" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Circle_J"]
position = Vector2(106, 120)
texture = ExtResource("2_0e48y")
hframes = 4
frame = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="Circle_J"]
position = Vector2(106, 120)
emitting = false
amount = 60
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_0hol4")

[node name="Circle_K" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Circle_K"]
position = Vector2(212, 120)
texture = ExtResource("2_0e48y")
hframes = 4
frame = 3

[node name="GPUParticles2D" type="GPUParticles2D" parent="Circle_K"]
position = Vector2(212, 120)
emitting = false
amount = 30
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_q6r6c")
